# MPI-Partix

./: CMakeLists.txt  LICENSE  README.md  config.sh
apps/: APItest1.cpp  APItest2.cpp  APItest3.cpp  bench1.cpp  bench2.cpp  bench3.cpp  bench4.cpp  bench5.cpp  partcom1.cpp  partcom2.cpp  partcom3.cpp  partcom4.cpp  ultcorrectness1.cpp
modules/: FindArgobots.cmake  FindQthreads.cmake
scripts/: launcher.sh  partix_plot_bw.py  run_over_overlap.sh  run_over_partsize.sh
src/: generic_types.h  partix.h  types.h
threading/: thread.h
threading/impl/ARGOBOTS/: argobots.cpp  argobots.cpp_backup  argobots_types.h
threading/impl/OMP/: omp.cpp  omp_types.h
threading/impl/PTHREADS/: pthreads.cpp  pthreads_types.h
threading/impl/QTHREADS/: qthreads.cpp  qthreads_types.h
